Fix Swagger schemes
